@@ -1,3 +1,7 @@
+2002-06-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* field.h: Add deep copy constructor.
+
 2002-06-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* geometry.py: Fix typo bug.
